--- a/PrimaryPipelineSetup/sections/step5_Protein_Aggregates.html
+++ b/PrimaryPipelineSetup/sections/step5_Protein_Aggregates.html
@@ -1,3 +1,12 @@
+<nav class="breadcrumb">
+    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadStep('step5')"> Pipeline Output Files</button>
+    <span>&rsaquo;</span>
+    <button onclick="loadSection('step5_Protein_Aggregates')" style="color:darkgrey">Protein Aggregates</button>
+</nav>
+<div id="topPage"></div>
+
 <h2>Protein Aggregates Experimental:</h2>
 <br>
 <p class="code">File: [sample_name]_Protein_Aggregates_Experimental.csv</p>
@@ -25,4 +34,6 @@
 </tr>
 </table>
 
-<button onclick="loadSteps('step5')">Back to Previous Page</button>
+<div class="scroll-top">
+    <button><a href="#topPage">Scroll to top page</a></button>
+</div>
